--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,10 +16,9 @@ jobs:
     - name: build and publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
-        username: $GITHUB_ACTOR
-        password: ${{ secrets.GITHUB_TOKEN }}
-        dockerfile: ./docker/Dockerfile
-        registry: docker.pkg.github.com
-        name: qaz52897/nats-server/nats-server
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        dockerfile: ./build/docker/Dockerfile
+        name: iamjhe/nats-server
         tags: latest
 
