--- a/deployment/service.yaml
+++ b/deployment/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nats-server-cluster
+  name: gravity-nats
 spec:
   ports:
   - name: client
@@ -10,5 +10,5 @@ spec:
     targetPort: 4222
   selector:
     app: nats
-    nats_cluster: nats-server-cluster
-  type: NodePort
+    nats_cluster: gravity-nats
+  type: ClusterIP
