--- a/deployment/service_mgmt.yaml
+++ b/deployment/service_mgmt.yaml
@@ -1,15 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nats-server-cluster-mgmt
+  name: gravity-nats-mgmt
 spec:
   ports:
   - name: cluster
     port: 6222
     protocol: TCP
     targetPort: 6222
+  - name: monitor
+    port: 8222
+    protocol: TCP
+    targetPort: 8222
   selector:
     app: nats
-    nats_cluster: nats-server-cluster
-    nats_version: latest
+    nats_cluster: gravity-nats
   type: ClusterIP
+  clusterIP: None
