--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: nats-server
+  IMAGE_NAME: brobridgeorg/nats-server
 
 jobs:
   build-and-push-image:
