--- a/.github/workflows/release-image.yml
+++ b/.github/workflows/release-image.yml
@@ -79,8 +79,8 @@ jobs:
 
     - uses: actions/upload-artifact@v4
       with:
-        name: outputs
-        path: outputs/*.txt
+        name: tags${{ matrix.suffix }}
+        path: outputs/tags${{ matrix.suffix }}.txt
 
   scan-image:
     runs-on: ubuntu-latest
@@ -132,7 +132,6 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           path: outputs
-          name: outputs
 
       - name: Aggregate all tags
         id: collect
